[gd_scene load_steps=12 format=3 uid="uid://b6mnghfo6suy4"]

[ext_resource type="Script" path="res://scenes/characters/printer.gd" id="1_tlr22"]
[ext_resource type="FontFile" uid="uid://cuquuixff1en" path="res://assets/fonts/Montserrat-Medium.ttf" id="2_5bvs5"]
[ext_resource type="PackedScene" uid="uid://b0fc0w1rhn0bw" path="res://scenes/characters/document_slot.tscn" id="3_ibp67"]
[ext_resource type="PackedScene" uid="uid://cefgnykhxv055" path="res://scenes/characters/slot.tscn" id="4_ddbc7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xhvxj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r10nk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sot1m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bsqd0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n1kxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cw2da"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5bocx"]

[node name="Printer" type="CharacterBody2D"]
position = Vector2(-40, 154)
scale = Vector2(3.5, 3.5)
script = ExtResource("1_tlr22")

[node name="printer_id_label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="filament_slot" parent="." instance=ExtResource("4_ddbc7")]
offset_left = 19.7143
offset_top = -40.0
offset_right = 109.714
offset_bottom = 50.0
scale = Vector2(0.717143, 0.694286)

[node name="container_button" type="Button" parent="."]
offset_left = 16.8571
offset_top = 26.5714
offset_right = 86.8571
offset_bottom = 106.571
theme_override_styles/focus = SubResource("StyleBoxTexture_xhvxj")
theme_override_styles/disabled = SubResource("StyleBoxTexture_r10nk")
theme_override_styles/hover = SubResource("StyleBoxTexture_sot1m")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bsqd0")
theme_override_styles/normal = SubResource("StyleBoxTexture_n1kxr")
toggle_mode = true
metadata/_edit_use_anchors_ = true

[node name="time_label" type="Label" parent="container_button"]
texture_filter = 1
layout_mode = 2
anchor_left = -0.0428571
anchor_top = -0.4
anchor_right = -0.0428571
anchor_bottom = -0.4
offset_left = 4.0
offset_top = 113.0
offset_right = 74.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="container_button"]
visible = false

[node name="document_slot" parent="." instance=ExtResource("3_ibp67")]
position = Vector2(88, 43.4286)
scale = Vector2(0.5, 0.5)

[node name="Window" type="Window" parent="."]
initial_position = 1
size = Vector2i(400, 260)
visible = false
always_on_top = true

[node name="MarginContainer" type="MarginContainer" parent="Window"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -76.5
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="extrusion_temp_label" type="Label" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Extrusion temperature"

[node name="extrusion_temp_line_edit" type="LineEdit" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5bvs5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cw2da")
placeholder_text = "360°"

[node name="HBoxContainer2" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="bed_temp_label" type="Label" parent="Window/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5bvs5")
text = "Bed temperature"

[node name="bed_temp_line_edit" type="LineEdit" parent="Window/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5bvs5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5bocx")
placeholder_text = "360°"

[node name="figure_slot" parent="Window/MarginContainer/VBoxContainer" instance=ExtResource("4_ddbc7")]
layout_mode = 2

[node name="status_label" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status: ON"

[node name="HBoxContainer3" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="close_button" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5bvs5")
text = "Close"

[node name="accept_button" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5bvs5")
text = "Run"

[connection signal="pressed" from="container_button" to="." method="_on_container_button_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer3/close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer3/accept_button" to="." method="_on_accept_button_pressed"]

[editable path="filament_slot"]
